# crewai-us-trip-planner

./: README.md  index.md  pyproject.toml
knowledge/: user_preference.txt
results/gpt-4o-result/: accommodation_report.md  attractions_report.md  foodie_report.md  rental_car_report.md  route_report.md
src/us_trip_planner/: crew.py  main.py
src/us_trip_planner/config/: agents.yaml  tasks.yaml
src/us_trip_planner/tools/: browser_tool.py  calculator_tool.py  mapycz_tool.py  search_tool.py
