[project]
name = "us_trip_planner"
version = "0.1.0"
description = "us-trip-planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "requests>=2.28.1,<3.0.0",
    "pydantic>=2.4.2,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "unstructured>=0.10.1,<1.0.0"
]

[project.scripts]
us_trip_planner = "us_trip_planner.main:run"
run_crew = "us_trip_planner.main:run"
train = "us_trip_planner.main:train"
replay = "us_trip_planner.main:replay"
test = "us_trip_planner.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
